<?xml version="1.0"?>
<package format="2">
  <name>zed2-no_cuda</name>
  <version>0.0.0</version>
  <description>The zed2-no_cuda package</description>

  <maintainer email="nutuangelo@yahoo.it">Angelo Nutu</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>opencv</depend>

</package>
